# Daily-Bias-Engine

./: .gitignore  DATA_DICTIONARY.md  FACTOR_LOGIC.md  README.md  SCORING_RULES.md  SPEC.md  USER_MANUAL.md  pyproject.toml
.github/workflows/: ifind_daily_update.yml
apps/: streamlit_app.py
configs/: calendar.yaml  data.yaml  factor_weights.yaml  instruments.yaml  thresholds.yaml
data/: liquidity_data_availability.csv  liquidity_raw_panel.csv
data/liquidity_charts/: chart_manifest.csv
data/snapshots/20260607T194540+0800_wind_2023-06-05_2026-06-05/: manifest.json
data/snapshots/20260613T184521+0800_ifind_2023-06-12_2026-06-12/: manifest.json
reports/weight_optimizer/: bucket_analysis_return.csv  bucket_analysis_risk.csv  factor_stability.csv  latest_weight_diagnostics.json  latest_weight_diagnostics.md  recommended_weights.yaml  regime_factor_ic.csv  walk_forward_folds.csv
scripts/: fetch_ifind_options_snapshot.py  fetch_ifind_snapshot.py  fetch_wind_options_snapshot.py  fetch_wind_snapshot.py  test_liquidity_data_availability.py  update_ifind_data.py
src/daily_bias_engine/: __init__.py  env.py  pipeline.py  weight_optimizer.py
tests/: fixtures.py  test_backtest_diagnostics.py  test_data.py  test_engine.py  test_factor_direction.py  test_features.py  test_ifind_option_client.py  test_labeling_backtest.py  test_no_lookahead.py  test_options_backtest_regime.py  test_options_exposure_levels.py  test_options_fetch_script.py  test_options_pricing_greeks.py  test_pipeline.py  test_streamlit_demo.py  test_weight_optimizer.py
(+433 files in other folders)
