[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-bias-engine"
version = "0.1.0"
description = "Rule-based daily market bias engine with mock Wind data interfaces."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Daily Bias Engine Contributors" }
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pyarrow>=14.0",
  "pyyaml>=6.0",
  "streamlit>=1.30"
]

[project.optional-dependencies]
test = [
  "pytest>=8.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-q"
